--- a/detail.html
+++ b/detail.html
@@ -132,8 +132,53 @@
       </ul>
     </nav>
 
-    <main>
-      <article class="artcle recipe-page"></article>
+    <main class="detail-page-main">
+      <article class="artcle detail-page" data-detail-container>
+        <div class="detail-banner detail-banner-skeleton skeleton"></div>
+
+        <div class="detail-content detail-content-skeleton">
+          <div class="title-wrapper">
+            <div class="title-skeleton skeleton"></div>
+          </div>
+
+          <div class="detail-author text-skeleton skeleton"></div>
+
+          <div class="detail-stats">
+            <div class="stats-item">
+              <span class="skeleton title-skeleton"></span>
+
+              <span class="skeleton text-skeleton"></span>
+            </div>
+
+            <div class="stats-item">
+              <span class="skeleton title-skeleton"></span>
+
+              <span class="skeleton text-skeleton"></span>
+            </div>
+
+            <div class="stats-item">
+              <span class="skeleton title-skeleton"></span>
+
+              <span class="skeleton text-skeleton"></span>
+            </div>
+          </div>
+
+          <div class="tag-list">
+            <div class="filter-chip skeleton filter-chip-skeleton"></div>
+            <div class="filter-chip skeleton filter-chip-skeleton"></div>
+            <div class="filter-chip skeleton filter-chip-skeleton"></div>
+          </div>
+
+          <div class="ingr-title skeleton title-skeleton"></div>
+
+          <div class="ingr-list">
+            <div class="ingr-item skeleton text-skeleton"></div>
+            <div class="ingr-item skeleton text-skeleton"></div>
+            <div class="ingr-item skeleton text-skeleton"></div>
+            <div class="ingr-item skeleton text-skeleton"></div>
+          </div>
+        </div>
+      </article>
     </main>
 
     <!-- Footer -->
